Fix alignment of featured news titles

--- a/resources/stylesheets/components/_last-news.scss
+++ b/resources/stylesheets/components/_last-news.scss
@@ -54,6 +54,9 @@
       bottom: 0;
       left: 0;
 
+      width: 100%;
+      height: 100%;
+
       content: '';
 
       background: transparent linear-gradient(180deg, #ffffff00 0%, #83838200 60%, #000000 100%) 0% 0% no-repeat padding-box;
@@ -64,7 +67,7 @@
 
   .h-entry__header--featured {
     position: absolute;
-    right: auto;
+    right: my.$gutter * 0.5;
     bottom: my.$gutter * 0.5;
     left: my.$gutter * 0.5;
     z-index: my.layer('default');
@@ -74,7 +77,7 @@
     margin: 0 auto;
 
     color: inherit;
-    text-align: left;
+    text-align: center;
     text-decoration: none;
     text-transform: none;
   }
@@ -83,7 +86,7 @@
   }
 
   .h-entry__p-name--last-news {
-    margin: 0;
+    margin: 0 auto;
 
     font-size: my.ms-step(16px);
     font-weight: my.font-weight('heading');
@@ -102,7 +105,9 @@
   }
 
   .h-entry__dt-published--last-news {
+    margin-right: auto;
     margin-bottom: 0;
+    margin-left: auto;
 
     text-transform: lowercase;
 
